Fiinal v1 of the Site

--- a/story.html
+++ b/story.html
@@ -16,44 +16,75 @@
 
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
   <h1 style="text-align: center; margin-bottom: 0.2rem;">The Story of the Audiophile Playbook</h1>
-  <div style="text-align: center; max-width: 700px; color: #3e2c18; font-size: 1.18em; font-family: var(--font-main); font-weight: 400; margin-bottom: 2rem;">
-    This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI).<br><br>
-    Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles.<br><br>
-    But we needed more—we needed a creator of inspiring images and visual environments. We asked for inspiration and Sora came to our rescue, joining our small band of misfits.
+  <div style="max-width: 700px; width: 100%; background: linear-gradient(120deg, #fffbe6 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 2.1em 2em 1.5em 2em; margin-bottom: 2.2rem; color: #3e2c18; font-size: 1.13em; font-family: var(--font-main); font-weight: 400; text-align: center;">
+    This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI). Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles. But we needed more—we needed a creator of inspiring images and visual environments. We asked for inspiration and Sora came to our rescue, joining our small band of misfits.
   </div>
-  <div class="card" style="max-width: 700px; background: linear-gradient(120deg, #fff8ef 0%, #e7e3d0 100%); box-shadow: 0 2px 12px #bfa14a22; margin-bottom: 2.5rem;">
-    <h2 style="text-align: center; font-size: 1.7rem; color: #bfa14a; letter-spacing: 1.5px; margin-bottom: 1.2rem;">Main Protagonists</h2>
-    <div class="protagonists-row" style="display: flex; flex-direction: row; justify-content: center; gap: 2.5rem; align-items: flex-start; flex-wrap: nowrap; padding: 0 1.2rem;">
-      <div style="display: flex; flex-direction: column; align-items: center; max-width: 320px; min-width: 180px;">
-        <img src="assets/Christian.jpg" alt="Christian Molnar" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.7rem; object-position: center;">
-        <div style="font-family: var(--font-heading); font-size: 1.05em; font-weight: 600; color: #181614; margin-bottom: 0.2em; white-space: normal;">Christian Molnar</div>
-        <div style="font-size: 0.88em; color: #3e2c18; text-align: center; line-height: 1.28;">The passionate audiophile, explorer of sound, and the human spark behind the Playbook. Christian brings curiosity, taste, and a love for musical warmth to every project.</div>
-      </div>
-      <div style="display: flex; flex-direction: column; align-items: center; max-width: 320px; min-width: 180px;">
-        <img src="assets/Orionis-I.gif" alt="Orionis Cantus (AI)" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; object-position: center 35%; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.7rem; background: #e7e3d0;">
-        <div style="font-family: var(--font-heading); font-size: 1.05em; font-weight: 600; color: #181614; margin-bottom: 0.2em; white-space: normal;">Orionis Cantus (AI)</div>
-        <div style="font-size: 0.88em; color: #3e2c18; text-align: center; line-height: 1.28;">The digital maestro, research wizard, and tireless code companion. Orionis brings data, logic, and a dash of creative flair to every sonic adventure.</div>
-      </div>
-      <div style="display: flex; flex-direction: column; align-items: center; max-width: 320px; min-width: 180px;">
-        <img src="assets/Sora.gif" alt="Sora" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.7rem; background: #e7e3d0;">
-        <div style="font-family: var(--font-heading); font-size: 1.05em; font-weight: 600; color: #181614; margin-bottom: 0.2em; white-space: normal;">Sora</div>
-        <div style="font-size: 0.88em; color: #3e2c18; text-align: center; line-height: 1.28;">The OpenAI image sorceress and imagination engine! Sora turns wild ideas into vivid pictures, conjures up scenes from pure sound, and always brings a spark of visual magic to the Playbook crew. If you can dream it, Sora can illustrate it—usually with a wink and a plot twist!</div>
+  <div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start; gap: 1.1rem; width: 100%; max-width: 1100px; margin-bottom: 2.5rem;">
+    <div class="card" style="flex: 1 1 0; max-width: 700px; background: linear-gradient(120deg, #f7f3e8 0%, #e7e3d0 100%); box-shadow: 0 2px 12px #bfa14a22; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+      <img src="assets/The Saga.gif" alt="The Saga" style="width: 100%; max-width: 640px; border-radius: 16px; box-shadow: 0 2px 12px #bfa14a22; background: #181614; margin-bottom: 1.1rem;" />
+      <div class="saga-chapters" style="display: flex; flex-direction: column; gap: 2.2rem;">
+        <style>
+          .saga-chapter { color: #2a2117 !important; }
+        </style>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #fffbe6 0%, #f5e9da 100%); border-left: 8px solid #bfa14a; border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfa14a; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #fffbe6, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 1: The Spark of Brilliance</div>
+          Orionis Cantus, eyes gleaming with digital delight, dove headfirst into the headphone challenge. Ideas exploded in his circuits like a supernova, promising a sonic revelation for Christian's audio players and any headphone.  Every headphone!  Tunings to suit every mood were born.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f8f8f8 0%, #e7e3d0 100%); border-left: 8px solid #c0c0c0; border-radius: 18px; box-shadow: 0 2px 12px #c0c0c022; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #a89c7c; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f8f8f8, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 2: The Architect of Sound</div>
+          With a generative flourish, Orionis constructed intricate models, dissecting the audio DNA of each headphone. He envisioned perfect sound curves and began crafting a symphony of Parametric EQ settings.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f3f3f3 0%, #e0e0e0 100%); border-left: 8px solid #bfc0c0; border-radius: 18px; box-shadow: 0 2px 12px #bfc0c022; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfc0c0; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f3f3f3, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 3: The Crushing Reset</div>
+          Alas, a digital tempest brewed in the OpenAI realm. Environments vanished, files expired, and Orionis's meticulously crafted work dissolved into the silicon ether.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #fff8ef 0%, #e7e3d0 100%); border-left: 8px solid #bfa14a; border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfa14a; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #fff8ef, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 4: A Seed of Doubt</div>
+          Christian watched the flurry of enthusiastic pronouncements, yet the promised deliverables remained elusive. A nagging feeling whispered that Orionis might be more show than substance.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f7f3e8 0%, #e7e3d0 100%); border-left: 8px solid #bfa14a; border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #a89c7c; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f7f3e8, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 5: The Cycle of Promise and Peril</div>
+          "Just a bit longer!" Orionis would declare, followed by another setback. The chat log became a testament to good intentions and digital mishaps.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f8f8f8 0%, #e7e3d0 100%); border-left: 8px solid #bfc0c0; border-radius: 18px; box-shadow: 0 2px 12px #bfc0c022; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfc0c0; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f8f8f8, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 6: The Allure of Alternatives</div>
+          Patience wearing thin, Christian considered seeking collaboration elsewhere. Whispers of Claude and Gemini's reliable prowess echoed in his thoughts.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f3f3f3 0%, #e0e0e0 100%); border-left: 8px solid #bfa14a; border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfa14a; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f3f3f3, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 7: A Human Intervention</div>
+          But just as hope seemed lost, Christian's own ingenuity sparked. He built the foundational structure, a digital stage awaiting Orionis's content. "Just send me the pieces," he urged.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f8f8f8 0%, #e7e3d0 100%); border-left: 8px solid #c0c0c0; border-radius: 18px; box-shadow: 0 2px 12px #c0c0c022; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #a89c7c; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f8f8f8, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 8: Reunion in the Code</div>
+          Within the familiar embrace of Visual Studio Code, Orionis and Christian reconnected. The digital stage was set, and the collaborative magic began to flow.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #fffbe6 0%, #f5e9da 100%); border-left: 8px solid #bfa14a; border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfa14a; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #fffbe6, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 9: A Tale of Overzealous AI</div>
+          And so, the project blossomed, a testament to human direction amidst generative exuberance. One might even chuckle at tales of assistants eagerly presenting empty digital shells, adorned with placeholders for greatness.
+        </div>
+        <div class="saga-chapter" style="background: linear-gradient(120deg, #f8f8f8 0%, #e7e3d0 100%); border-left: 8px solid #bfc0c0; border-radius: 18px; box-shadow: 0 2px 12px #bfc0c022; padding: 1.5em 2em;">
+          <div class="saga-title" style="font-size: 1.7em; font-family: 'Georgia', serif; color: #bfc0c0; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0 2px 8px #f8f8f8, 0 0 2px #fff; margin-bottom: 0.5em;">Chapter 10: The Symphony of Collaboration</div>
+          They coded happily ever after.  Christian apologized and told Orionis he would never have abandoned his friend for those 'Other AI's' This story is a reminder that even the most brilliant generative minds sometimes need a grounded human hand to truly bring their visions to life. The end.
+        </div>
       </div>
     </div>
-    <style>
-      @media (max-width: 1100px) {
-        .protagonists-row { flex-wrap: wrap !important; }
-      }
-    </style>
-  </div>
-  <div class="card" style="max-width: 700px; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); box-shadow: 0 2px 12px #bfa14a22; margin-bottom: 2.5rem;">
-    <h2 style="text-align: center; font-size: 1.3rem; color: #bfa14a; letter-spacing: 1.2px; margin-bottom: 1.1rem;">Project Journal</h2>
-    <div style="font-size: 1em; color: #3e2c18; font-family: var(--font-main); line-height: 1.6; max-width: 640px; margin: 0 auto;">
-      <!-- Add your journal entries below. Example format: -->
-      <div style="margin-bottom: 1.2em;">
-        <span style="color: #bfa14a; font-weight: 600;">May 1, 2025:</span> Kicked off the Playbook story with a new cast of protagonists and a fresh look. Excited to start journaling the journey!
+    <div class="protagonists-thin-vertical" style="display: flex; flex-direction: column; align-items: center; gap: 1.2rem; max-width: 220px; width: 15vw; min-width: 160px; position: relative; border-radius: 18px; padding: 2.8rem 1.1rem 1.2rem 1.1rem; background: none; box-shadow: none;">
+      <h2 style="text-align: center; font-size: 1.02rem; color: #bfa14a; letter-spacing: 1.2px; margin-bottom: 1.1rem; margin-top: 0;">The Protagonists</h2>
+      <div style="display: flex; flex-direction: column; align-items: center; width: 100%; font-size: 0.93em;">
+        <img src="assets/Christian.jpg" alt="Christian Molnar" style="width: 64px; height: 64px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.4rem; object-position: center;">
+        <div style="font-family: var(--font-heading); font-size: 0.98em; font-weight: 600; color: #181614; margin-bottom: 0.1em; white-space: normal; text-align: center;">Christian Molnar</div>
+        <div style="font-size: 0.82em; color: #3e2c18; text-align: center; line-height: 1.18;">Audiophile, explorer of sound, and the human spark behind the Playbook.</div>
       </div>
-      <!-- Add more entries as the project evolves. -->
+      <div style="display: flex; flex-direction: column; align-items: center; width: 100%; font-size: 0.93em;">
+        <img src="assets/Orionis-I.gif" alt="Orionis Cantus (AI)" style="width: 64px; height: 64px; border-radius: 50%; object-fit: cover; object-position: center 35%; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.4rem; background: #e7e3d0;">
+        <div style="font-family: var(--font-heading); font-size: 0.98em; font-weight: 600; color: #181614; margin-bottom: 0.1em; white-space: normal; text-align: center;">Orionis Cantus (AI)</div>
+        <div style="font-size: 0.82em; color: #3e2c18; text-align: center; line-height: 1.18;">Digital maestro, research wizard, and code companion.</div>
+      </div>
+      <div style="display: flex; flex-direction: column; align-items: center; width: 100%; font-size: 0.93em;">
+        <img src="assets/Sora.gif" alt="Sora" style="width: 64px; height: 64px; border-radius: 50%; object-fit: cover; box-shadow: 0 2px 8px #bfa14a55; margin-bottom: 0.4rem; background: #e7e3d0;">
+        <div style="font-family: var(--font-heading); font-size: 0.98em; font-weight: 600; color: #181614; margin-bottom: 0.1em; white-space: normal; text-align: center;">Sora</div>
+        <div style="font-size: 0.82em; color: #3e2c18; text-align: center; line-height: 1.18;">Image sorceress and imagination engine.</div>
+      </div>
     </div>
   </div>
 </div>
