--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
   <h1 style="text-align: center; margin-bottom: 0.2rem;">Audiophile Playbook by Christian Molnar</h1>
   <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">Your Gateway to Headphone Happiness</div>
-  <div style="text-align: center; margin: 1.2rem 0 1.8rem 0; font-size: 1.18em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; max-width: 700px;">
-    Ever wondered how to squeeze every last drop of joy from your DAPs and headphones? So did I! That’s why I asked Copilot to dive deep into the world of audiophile gear and help me craft the ultimate listening experience. Copilot totally rocked it—understanding my gear, my love for warm sound, and even suggesting a system for Warm, Max Bass, and Relaxed (long-session) listening.<br><br>
-    What you see here is just the beginning! I’m planning to turn this site into a playground for all sorts of fun audiophile adventures and resources. I hope you find it as useful (and fun) as I do. Happy listening!
+  <div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start; gap: 1.2rem; width: 100%; max-width: 1100px; margin-top: 2rem; margin-bottom: 2.5rem;">
+    <div style="flex: 1 1 0; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; min-width: 220px; max-width: 340px; font-size: 1.02em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; text-align: center;">
+      Ever wondered how to squeeze every last drop of joy from your DAPs and headphones? So did I! That’s why I asked Copilot to dive deep into the world of audiophile gear and help me craft the ultimate listening experience.<br><br>
+      Copilot totally rocked it—understanding my gear, my love for warm sound, and even suggesting a system for Warm, Max Bass, and Relaxed (long-session) listening.
+    </div>
+    <div style="flex: 1 1 0; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; min-width: 220px; max-width: 340px; font-size: 1.02em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; text-align: center;">
+      What you see here is just the beginning! I’m planning to turn this site into a playground for all sorts of fun audiophile adventures and resources.<br><br>
+      I hope you find it useful.<br.><br>I used AI to create a story about this saga that you may find interesting. It's a quick 2 min read.
+    </div>
+    <div style="flex: 1 1 0; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; min-width: 220px; max-width: 340px; font-size: 1.02em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; text-align: center;">
+      The moral of the story: watch out for AI's eagerness to please. It will lie and hide and tell you time and time again how wonderful you are, how you are doing all the right things, and that it's not your fault. It will even tell you exactly what it did wrong, and that 'These are the steps I'll take so it never happens again' in a super nice table... And turn right around and give you a blank file with nothing on it and say 'Finally! Your masterpiece is here!'
+    </div>
   </div>
 </div>
 <div style="display: flex; flex-direction: column; align-items: center;">
