--- a/acroca1000t.html
+++ b/acroca1000t.html
@@ -23,7 +23,7 @@
   <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image" style="margin-bottom: 2rem;">
   <div class="card" style="max-width: 900px;">
     <h2>CA1000T vs KANN Max: Feature Comparison</h2>
-    <table>
+    <table style="color: #2a2117;">
       <thead>
         <tr><th>Feature</th><th>KANN Max</th><th>CA1000T</th></tr>
       </thead>
@@ -39,7 +39,7 @@
   </div>
   <div class="card" style="max-width: 900px;">
     <h2>CA1000T Output Modes: Tube, Hybrid, OP</h2>
-    <table>
+    <table style="color: #2a2117;">
       <thead>
         <tr><th>Output Setting</th><th>Sound Character</th></tr>
       </thead>
@@ -57,7 +57,7 @@
   </div>
   <div class="card" style="max-width: 900px;">
     <h2>Recommended Output Modes for Each Tuning</h2>
-    <table>
+    <table style="color: #2a2117;">
       <thead>
         <tr><th>Tuning Style</th><th>Best Output Mode</th></tr>
       </thead>
