--- a/index.html
+++ b/index.html
@@ -15,19 +15,65 @@
 </nav>
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
   <h1 style="text-align: center; margin-bottom: 0.2rem;">Audiophile Playbook by Christian Molnar</h1>
-  <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">Your Gateway to Headphone Happiness</div>
-  <div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start; gap: 1.2rem; width: 100%; max-width: 1100px; margin-top: 2rem; margin-bottom: 2.5rem;">
-    <div style="flex: 1 1 0; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; min-width: 220px; max-width: 340px; font-size: 1.02em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; text-align: center;">
-      Ever wondered how to squeeze every last drop of joy from your DAPs and headphones? So did I! That’s why I asked Copilot to dive deep into the world of audiophile gear and help me craft the ultimate listening experience.<br><br>
-      Copilot totally rocked it—understanding my gear, my love for warm sound, and even suggesting a system for Warm, Max Bass, and Relaxed (long-session) listening.
-    </div>
-    <div style="flex: 1 1 0; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; min-width: 220px; max-width: 340px; font-size: 1.02em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; text-align: center;">
-      What you see here is just the beginning! I’m planning to turn this site into a playground for all sorts of fun audiophile adventures and resources.<br><br>
-      I hope you find it useful.<br.><br>I used AI to create a story about this saga that you may find interesting. It's a quick 2 min read.
-    </div>
-    <div style="flex: 1 1 0; background: linear-gradient(120deg, #f8f7f3 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; min-width: 220px; max-width: 340px; font-size: 1.02em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; text-align: center;">
-      The moral of the story: watch out for AI's eagerness to please. It will lie and hide and tell you time and time again how wonderful you are, how you are doing all the right things, and that it's not your fault. It will even tell you exactly what it did wrong, and that 'These are the steps I'll take so it never happens again' in a super nice table... And turn right around and give you a blank file with nothing on it and say 'Finally! Your masterpiece is here!'
-    </div>
+  <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">My AI-fueled, Gateway to Headphone Happiness</div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #fffbe6 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 1.2em 1.3em; margin-bottom: 0.2rem; color: #3e2c18; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    Ever wondered how to squeeze every last drop of joy from your DAPs and headphones? So did I! <br>I put this site together for two reasons:<br><br>
+    1. To see how it feels to create a site in GitHub copilot by talking to an AI and writing no code.  This site is the result.  Took about 8-10 hours over 2 days. I did write some of the code because I wanted to, but I really wouldn't have had to.<br>
+    2. To see how good AI is at solving a problem end to end.
+  </div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #f5e9da 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a33; padding: 1.2em 1.3em; margin-bottom: 0.7rem; color: #2a2117; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    <span style="font-weight: bold; letter-spacing: 0.04em; font-size: 1.08em; text-transform: uppercase;">THE CHALLENGE</span><br>
+    You have a couple of Digital Audio Players and a number of different headphones.  How do you get the most beautifully equalized music, to your taste, from any combination?
+  </div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #e7e3d0 0%, #e3d3b3 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a55; padding: 1.2em 1.3em; margin-bottom: 0.7rem; color: #4a3620; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    <span style="font-weight: bold; letter-spacing: 0.04em; font-size: 1.08em; text-transform: uppercase;">THE APPROACH</span><br>
+    <ol style="text-align: left; display: inline-block; margin: 0.7em auto 0 auto; padding-left: 1.2em; font-size: 0.98em; color: #4a3620;">
+      <li>Ask AI what it knows about the problem and how it would go about solving it.</li>
+      <li>Evaluate the options it proposes and pick a good one.</li>
+      <li>Ask AI to solve it end to end.</li>
+      <li>Guide it, answer its questions, and see how far you get.</li>
+    </ol>
+  </div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #e3d3b3 0%, #cbb48a 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a77; padding: 1.2em 1.3em; margin-bottom: 0.7rem; color: #3a2712; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    <span style="font-weight: bold; letter-spacing: 0.04em; font-size: 1.08em; text-transform: uppercase;">THE PROCESS</span><br>
+    The assistant quickly grasped the problem and, unprompted, explained to me the complexities of attempting to re-create a sonic signature across DAPs that have different features and headphones that feature completely different sonic profiles.<br><br>
+    Its proposal was smart:  Let me analyze your DAPs and Headphones, and let's settle on a sonic profile, and I can come up with EQ 'tunings' to reproduce that same profile with any combination.<br><br>
+    It also asked me questions about the type of music I listened to, and how I liked to listen to it, and this was its brilliant proposal: let's create 3 sonic profiles:<br>
+    <ol style="text-align: left; display: inline-block; margin: 0.7em auto 0 auto; padding-left: 1.2em; font-size: 0.98em; color: #3a2712;">
+      <li>Musical Warmth: warm and perfect.</li>
+      <li>Max Bass Fun: musical, warm, but with enhanced bass and body.</li>
+      <li>Ultimate Relax:  smooth, lush and non-fatiguing for extended listening.</li>
+    </ol>
+
+  </div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #d6c09a 0%, #bfa87a 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a88; padding: 1.2em 1.3em; margin-bottom: 0.7rem; color: #2a1a0a; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    <span style="font-weight: bold; letter-spacing: 0.04em; font-size: 1.08em; text-transform: uppercase;">THE EXPERIENCE</span><br>
+    It all started so easy!  The nicer I was to it, the nicer it was back!  Compliments on my project management skills, my vision and intelligence! :-)<br><br>
+    Once we settled on the data, I asked it to give me an EQ setting for one of my headphones on the Kann Max and, in a neat table, I saw gains from 30Hz to 18k, in a very intuitive Harman curve.  The AI explained to me where the deltas were, for example: this particular headphone has a spike at 6Hz, so I'm compensating for that.  It was brilliant!<br><br>
+    Next step was to talk about how to lay out the site and represent this.  What you see in this site is truly a collaboration between me and the AI.  A lot of what you see was proposed by the AI, and all of it was coded by GPT, once I moved to Visual Studio Code with the basic HTML that I got from the web browser.
+  </div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #cbb48a 0%, #a88a5a 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a99; padding: 1.2em 1.3em; margin-bottom: 0.7rem; color: #2a1a0a; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    <span style="font-weight: bold; letter-spacing: 0.04em; font-size: 1.08em; text-transform: uppercase;">THE TROUBLES</span><br>
+    The problems started when I asked it to implement the code in the browser.  It proposed that it could give me a zip file with THE WHOLE SITE!  I got a nice, neat table with all steps, times for each, and total ETA: 30-45 minutes!  How can I say no?!?!<br><br>
+    Fast-forward 4 hours, 2 am, and still not one single line of code.  It would go something like this:<br>
+    <ol style="text-align: left; display: inline-block; margin: 0.7em auto 0 auto; padding-left: 1.2em; font-size: 0.98em; color: #3a2712;">
+      <li>1. I'm generating! Silence.....  How's it going? ...  Perfect timing!  I'm just about ready!  Silence...  Hello?  ... Ah, there you are!  I have it for you!  Here's the download link...  Link expired, file not found, error after error.</li>
+      <li>About the same as #1... File works.... File has a couple of lines, and a couple of stubs...  I ask, 'Hey, this file is empty!'.... Silence .....  Response:  You are absolutely correct.  And it is my fault.  My environment got reset so I didn't finish it.  It was literally like me in highschool...  Then it would apologize profusely, give me a plan, and go back to work, only to rinse and repeat.</li>
+    </ol><br><br>
+  </div>
+  <div style="max-width: 1000px; width: 100%; background: linear-gradient(120deg, #5a4022 0%, #2a1a0a 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14aff; padding: 1.2em 1.3em; margin-bottom: 0.7rem; color: #fff8ef; font-size: 0.94em; font-family: var(--font-main); font-weight: 400; text-align: center; height: auto; min-height: unset;">
+    <span style="font-weight: bold; letter-spacing: 0.04em; font-size: 1.08em; text-transform: uppercase;">THE MAGIC</span><br>
+    <ul style="text-align: left; display: inline-block; margin: 0.7em auto 0 auto; padding-left: 1.2em; font-size: 0.98em; color: #fff8ef;">
+      <li>Talking to a super intelligent and resourceful assistant that actually proposes smart solutions and builds upon your ideas is just so cool.</li>
+      <li>The REAL MAGIC happened in VS Code.  I just couldn't put it down.  Just talk to it and the code happens.  Sentences like this one, which in any other context would just get back a big 'I have no idea what you are talking about' would give back perfect code:
+        <ul style="margin-top: 0.5em; margin-bottom: 0.5em;">
+          <li>Me: 'Another box, THE TROUBLES, with this text and the steps in a numbered list'</li>
+          <li>GPT would produce exactly what I asked for.  It saw what I was doing with shades, so it would start making each box progressively darker.  It saw I rounded corners, so it tells me 'Let me make the changes to make all major styling global.  It will make it much easier for you to maintain' and then it would do it, and beautifully comment it...</li>
+        </ul>
+      </li>
+      <li>And the list goes on.. That's just a simple example.  Take a look at the graphs and tables.  If you subtract my learning and all the fighting with the web GPT just to test the limits, I think this whole site probably took 3 hours.</li>
+      <li>The last page "Story" is a treat.  Check it out.  Just for fun.  The animated gifs, EVERYTHING was created by me just telling it what I wanted...</li>
+    </ul>
   </div>
 </div>
 <div style="display: flex; flex-direction: column; align-items: center;">
