--- a/acroca1000t.html
+++ b/acroca1000t.html
@@ -18,7 +18,7 @@
   <h1 style="text-align: center; margin-bottom: 0.2rem;">Astell & Kern ACRO CA1000T</h1>
   <div style="text-align: center; color: #181614; font-family: var(--font-heading); font-size: 2.2rem; font-weight: 400; margin-bottom: 0.7rem;">Playbook & Output Mode Guide</div>
   <div style="text-align: center; margin: 1.2rem 0 1.8rem 0; font-size: 1.18em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; max-width: 700px;">
-    The ACRO CA1000T is a unique DAP/desktop hybrid with a world-first: you can blend between pure solid state (OP AMP) and pure vacuum tube output, letting you dial in your perfect sound. This page summarizes how its settings compare to the KANN Max, and how to use the Tube/Hybrid/OP output for the best listening experience!
+    The ACRO CA1000T is a unique DAP/desktop hybrid with a world-first: you can blend between pure solid state (OP AMP) and pure vacuum tube output, letting you dial in your perfect sound. <br><br>This page summarizes how its settings compare to the KANN Max, and how to use the Tube/Hybrid/OP output for the best listening experience!
   </div>
   <img src="assets/CA1000T.jpg" alt="Astell&Kern CA1000T" class="product-image" style="margin-bottom: 2rem;">
   <div class="card" style="max-width: 900px;">
