--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
 <nav class="main-nav">
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="kann_max.html">Kann Max</a></li>
-    <li><a href="acroca1000t.html">ACRO CA1000T</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0);" class="dropbtn">DACs</a>
+      <div class="dropdown-content">
+        <a href="kann_max.html">Kann Max</a>
+        <a href="acroca1000t.html">ACRO CA1000T</a>
+      </div>
+    </li>
+    <li class="dropdown">
+      <a href="javascript:void(0);" class="dropbtn">Turntables</a>
+      <div class="dropdown-content">
+        <a href="kenwood_kd500.html">Kenwood KD-500</a>
+      </div>
+    </li>
     <li><a href="story.html">Story</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
@@ -99,6 +110,8 @@
     <a href="kann_max.html">Kann Max</a>
     <span class="divider">|</span>
     <a href="acroca1000t.html">ACRO CA1000T</a>
+    <span class="divider">|</span>
+    <a href="kenwood_kd500.html">Kenwood KD-500</a> <!-- Added link -->
     <span class="divider">|</span>
     <a href="story.html">Story</a>
     <span class="divider">|</span>
