--- a/story.html
+++ b/story.html
@@ -7,8 +7,19 @@
 <nav class="main-nav">
   <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="kann_max.html">Kann Max</a></li>
-    <li><a href="acroca1000t.html">ACRO CA1000T</a></li>
+    <li class="dropdown">
+      <a href="javascript:void(0);" class="dropbtn">DACs</a>
+      <div class="dropdown-content">
+        <a href="kann_max.html">Kann Max</a>
+        <a href="acroca1000t.html">ACRO CA1000T</a>
+      </div>
+    </li>
+    <li class="dropdown">
+      <a href="javascript:void(0);" class="dropbtn">Turntables</a>
+      <div class="dropdown-content">
+        <a href="kenwood_kd500.html">Kenwood KD-500</a>
+      </div>
+    </li>
     <li><a href="story.html">Story</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
@@ -16,9 +27,11 @@
 
 <div style="display: flex; flex-direction: column; align-items: center; margin-top: 2rem;">
   <h1 style="text-align: center; margin-bottom: 0.2rem;">The Story of the Audiophile Playbook</h1>
-  <div style="max-width: 805px; width: 100%; background: linear-gradient(120deg, #fffbe6 0%, #e7e3d0 100%); border-radius: 18px; box-shadow: 0 2px 12px #bfa14a22; padding: 0.8em 2.3em 0.7em 2.3em; margin-bottom: 0.05rem; color: #3e2c18; font-size: 1.08em; font-family: var(--font-main); font-weight: 400; text-align: center;">
-    This project was a collaboration between Christian Molnar and Orionis Cantus (ChatGPT, OpenAI). Together, we built something extraordinary: a personalized, meticulously tuned EQ reference for audiophiles. But we needed more—we needed a creator of inspiring images and visual environments. We asked for inspiration and Sora came to our rescue, joining our small band of misfits.
+  <!-- Standardized Intro Blurb -->
+  <div style="text-align: center; margin: 1.2rem 0 1.8rem 0; font-size: 1.18em; color: #3e2c18; font-family: var(--font-main); font-weight: 400; max-width: 700px;">
+    This page chronicles the collaborative journey between Christian Molnar and the AI assistants, Orionis Cantus (ChatGPT) and Sora, in creating the Audiophile Playbook. It details the process, challenges, and breakthroughs encountered while building this unique resource.
   </div>
+  <!-- Removed old intro box -->
   <div style="display: flex; flex-direction: row; justify-content: center; align-items: flex-start; gap: 1.1rem; width: 100%; max-width: 1100px; margin-bottom: 2.5rem;">
     <div class="card" style="flex: 1 1 0; max-width: 700px; background: linear-gradient(120deg, #f7f3e8 0%, #e7e3d0 100%); box-shadow: 0 2px 12px #bfa14a22; display: flex; flex-direction: column; align-items: center; justify-content: center;">
       <img src="assets/The Saga.gif" alt="The Saga" style="width: 100%; max-width: 640px; border-radius: 16px; box-shadow: 0 2px 12px #bfa14a22; background: #181614; margin-bottom: 1.1rem;" />
@@ -95,6 +108,8 @@
     <a href="kann_max.html">Kann Max</a>
     <span class="divider">|</span>
     <a href="acroca1000t.html">ACRO CA1000T</a>
+    <span class="divider">|</span>
+    <a href="kenwood_kd500.html">Kenwood KD-500</a> <!-- Added link -->
     <span class="divider">|</span>
     <a href="story.html">Story</a>
     <span class="divider">|</span>
